0x07-python-test_driven_development/tests/5-text_indentation.txt
=================================
The ``5-text_indentation`` module
---------------------------------

^^^^^^^^^^^^^^^^^^^^^^^^^^
Using ``text_indentation``
^^^^^^^^^^^^^^^^^^^^^^^^^^
_____________________________________________________________________
First import ``text_indentation`` from ``5-text_indentation`` module:
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@

	>>> text_indentation = __import__('5-text_indentation').text_indentation

Now test it:
""""""""""""

	>>> text_indentation("ahmed:omer?elgaili.")
	ahmed:
	<BLANKLINE>
	omer?
	<BLANKLINE>
	elgaili.
	<BLANKLINE>

	>>> text_indentation(12)
	Traceback (most recent call last):
		...
	TypeError: text must be a string
